# spm-runtime

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  compile.yml  guess_version.yml  publish.yml  release-r2020a.yml  release-r2020b.yml  release-r2021a.yml  release-r2021b.yml  release-r2022a.yml  release-r2022b.yml  release-r2023a.yml  release-r2023b.yml  release-r2024a.yml  release-r2024b.yml  release-r2025a.yml  release-r2025b.yml  release.yml  test_compile.yml  test_matlab_token.yml
scripts/: make_release_workflows.py  release-template.yml.jinja  spm_make_ctf.py  spm_make_package.py  spm_make_python.m  spm_make_runtime.py  workflow_compile.py
spm_runtime/: __init__.py  __main__.py  _endpoint.py  _standalone.py  _version.py
