[project]
name = "spm-runtime"
description = "Compiled SPM package that can be called from Python"
readme = "README.md"
classifiers = [ "Intended Audience :: Science/Research", "Operating System :: OS Independent", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13",]
license = "GPL-2.0"
license-files = [ "LICENSE",]
requires-python = ">=3.10,<3.14"
dependencies = [ "matlab-runtime>=0.0.4",]
version = "25.01.02.post1"
[[project.maintainers]]
name = "Yael Balbastre"
email = "y.balbastre@ucl.ac.uk"

[build-system]
requires = [ "setuptools >= 77.0", "wheel", "matlab_runtime",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [ "pytest",]

[project.urls]
Homepage = "https://github.com/balbasty/spm-runtime"
Issues = "https://github.com/balbasty/spm-runtime/issues"

[project.scripts]
spm = "spm_runtime:_standalone_entrypoint"

[tool.setuptools.package-data]
spm_runtime = [ "_spm/_spm.ctf",]
